--- a/aula1.html
+++ b/aula1.html
@@ -10,5 +10,6 @@
 </head>
 <body>
     <h1 class="primeiroTitulo">Primeira aula de JS</h1>
+    <h1 class="primeiroTitulo">Primeira aula de JS</h1>
 </body>
 </html>
